# GeneralExercises

./: .gitignore  README.org
21s/: README.md
21s/Haskell/: Haskell.cabal  package.yaml  stack.yaml
21s/Haskell/app/: Main.hs
21s/Haskell/test/: DataArbitraryInstances.hs
21s/scala/: build.sbt
AFP/: AFP.cabal  CHANGELOG.md
AFP/ConnectFour/: AFP.cabal  connectFour.hs
AFP/MonadicCompiler/: CHANGELOG.md  MonadicCompiler.cabal
AFP/MonadicCompiler/app/: Main.hs
AFP/MonadicCompiler/src/: MonadicCompiler.hs  SourceLanguage.hs  VirtualMachine.hs
AFP/MonadicCompiler/tests/: Spec.hs  TestData.hs  VirtualMachineSpec.hs
AFP/src/: ConnectFour.hs
AdventOfCode/: .ghci  .gitignore  AdventOfCode.cabal  README.md  fourmolu.yaml  package.yaml  shell.nix  stack.yaml
AdventOfCode/app/: Main.hs
AdventOfCode/input/2016/: 23DecemberP2.txt
AdventOfCode/input/2021/: 21DecemberTest.txt
AdventOfCode/input/2024/: December14.txt  December15.txt  December19.txt
AdventOfCode/src/Lib/: Bit.hs  Coord.hs  CoordDirection.hs  CoordMap.hs  CoordMove.hs  Direction.hs  (+12 more)
AdventOfCode/test/: Spec.hs  TestCase.hs
AdventOfCode2020/: AdventOfCode2020.cabal  package.yaml
AdventOfCode2020/app/: Main.hs
AdventOfCode2020/src/: EighteenthDecember.hs  EighthDecember.hs  EleventhDecember.hs  FifteenthDecember.hs  FifthDecember.hs  FirstDecember.hs  ForthDecember.hs  FourteenthDecember.hs  FourthDecember.hs  NineteenthDecember.hs  NinthDecember.hs  SecondDecember.hs  SeventeenthDecember.hs  SeventhDecember.hs  SixteenthDecember.hs  SixthDecember.hs  TenthDecember.hs  ThirdDecember.hs  ThirteenthDecember.hs  TwelfthDecember.hs  TwentiethDecember.hs  TwentyFifthDecember.hs  TwentyFirstDecember.hs  TwentyFourthDecember.hs  TwentySecondDecember.hs  TwentyThirdDecember.hs
GildedRoseKata/haskell/: gilded-rose.cabal
GildedRoseKata/scala/: build.sbt
GreatTotalAdditions/: go.mod  greattotaladditions  main.go
GreatTotalAdditions/base/: array.go  functor.go
GreatTotalAdditions/gta/: gta.go
ProjectEuler/: projectEuler.hs  projectEuler2.hs
ProjectEuler/haskell/: projectEuler.hs  projectEuler3.hs
ProjectEuler/projecteulerhaskell/: ChangeLog.md  README.md  package.yaml  projecteulerhaskell.cabal  stack.yaml
ProjectEuler/projecteulerscala/: .gitignore  .scalafmt.conf  build.sbt
UrlShortener/: Cargo.toml
UrlShortener/src/: main.rs
Watchlist/: Readme.md
Watchlist/Haskell/: httpcall.txt  package.yaml  stack.yaml  watchList.cabal
analytics/: README.md  SolutionDescription.md  build.sbt
freecodecamp/getStartedWithNodeJS/: README.org  app.js  hello.js  httpServer.js  package-lock.json
phoneCompany/: README.md  build.sbt
phoneCompany/haskell/: .gitignore  ChangeLog.md  README.md  package.yaml  stack.yaml
phoneCompany/scala/: .gitignore
setgame/: README.md  build.sbt
(+503 files in other folders)
