cabal-version:      2.4
name:               MonadicCompiler
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: Project for the Advanced Functional Programming course: https://www.youtube.com/watch?v=PJGz-8jDeIs

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Enrico Benini
maintainer:         benkio89@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable MonadicCompiler
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    MonadicCompiler, base ^>=4.15.1.0
    hs-source-dirs:   app
    default-language: Haskell2010

library
  exposed-modules: MonadicCompiler
  other-modules: SourceLanguage
  -- build-depends:
  build-depends: base ^>=4.15.1.0
  hs-source-dirs: src
  default-language: Haskell2010